<resources>
    <string name="app_name">TicTacToe</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to_rock_paper_scissors">Welcome to Rock-Paper-Scissors?</string>
    <string name="please_choose_your_weapon">Please choose your weapon:</string>
    <string name="rock">Rock</string>
    <string name="paper">PAPER</string>
    <string name="scissors">SCISSORS</string>
    <string name="player">Player:</string>
    <string name="string_player" />
    <string name="computer">Computer:</string>
    <string name="playerweapon">PlayerWeapon:</string>
    <string name="computerweapon">ComputerWeapon:</string>
    <string name="who_will_win">Who Will Win ?</string>
</resources>
